--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,7 @@ name: deploy-infrastructure-website
 on: [workflow_dispatch]
 
 env:
+    ENVIRONMENT: prod
     AZURE_RESOURCEGROUP_NAME: rg-dbapp
     AZURE_WEBAPP_NAME: webapp-dbapp
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}
@@ -13,13 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      with:
-        path: repo
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - uses: azure/arm-deploy@v1
       with:
+        deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=Test
+        parameters: environmentType=${{ env.ENVIRONMENT }}
