--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,9 @@
 name: deploy-infrastructure-website
 
-on: [workflow_dispatch]
+on:
+  push:
+    branches:
+    - main
 
 env:
     ENVIRONMENT: prod
