--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,8 +11,6 @@ env:
     ENVIRONMENT: prod
     AZURE_RESOURCEGROUP_NAME: rg-dbapp
     AZURE_WEBAPP_NAME: webapp-dbapp
-    SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}
-    SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}
 
 jobs:
   deploy:
@@ -27,4 +25,4 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT }}
+        parameters: environmentType=${{ env.ENVIRONMENT }},adminUser=${{ secrets.POSTGRES_ADMIN  }},adminPassword=${{ secrets.POSTGRES_PASSWORD  }}
