--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,6 +11,8 @@ env:
     ENVIRONMENT: prod
     AZURE_RESOURCEGROUP_NAME: rg-dbapp
     AZURE_WEBAPP_NAME: webapp-dbapp
+    POSTGRES_ADMIN: ${{ secrets.POSTGRES_ADMIN }}
+    POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
 jobs:
   deploy:
@@ -25,4 +27,4 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT }},adminUser=${{ secrets.POSTGRES_ADMIN  }},adminPassword=${{ secrets.POSTGRES_PASSWORD  }}
+        parameters: environmentType=${{ env.ENVIRONMENT }},adminUser=${{ env.POSTGRES_ADMIN  }},adminPassword=${{ env.POSTGRES_PASSWORD  }}
