--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,4 +27,4 @@ jobs:
         deploymentName: ${{ github.run_number }}
         resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
         template: ./deploy/main.bicep
-        parameters: environmentType=${{ env.ENVIRONMENT }} adminUser=${{ env.POSTGRES_ADMIN  }} adminPassword=${{ env.POSTGRES_PASSWORD  }}
+        parameters: adminUser=${{ env.POSTGRES_ADMIN  }} adminPassword=${{ env.POSTGRES_PASSWORD  }}
